crates/contextdb-core/tests/fixtures/compile_fail/txid_into_snapshotid.stderr
error[E0308]: mismatched types
 --> tests/fixtures/compile_fail/txid_into_snapshotid.rs:7:26
  |
7 |     let _s: SnapshotId = tx;
  |             ----------   ^^ expected `SnapshotId`, found `TxId`
  |             |
  |             expected due to this
